objects/SO_Asset_Ownership__c.object
<CustomObject>
    <label>Vehicle Ownership</label>
    <nameField>
        <displayFormat>VO-{00000000}</displayFormat>
        <label>Vehicle Ownership</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Ownerships</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>SO_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.SO_Manufacturer__c</field>
                <operation>equals</operation>
                <valueField>Asset.SO_Brand__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.SO_Model__c</field>
                <operation>equals</operation>
                <valueField>Asset.SO_Model__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Vehicle Ownerships</relationshipLabel>
        <relationshipName>Asset_Ownerships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Model</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SO_Vehicle_Model__c.SO_Manufacturer__c</field>
                <operation>equals</operation>
                <valueField>$Source.SO_Manufacturer__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SO_Vehicle_Model__c</referenceTo>
        <relationshipLabel>Vehicle Ownerships</relationshipLabel>
        <relationshipName>Asset_Ownerships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Account__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>The primary account used, when creating a ownership record type</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vehicles Owned</relationshipLabel>
        <relationshipName>Asset_Ownerships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Vehicles Driven</relationshipLabel>
        <relationshipName>Assets_Driven</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_Manufacturer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturer</label>
        <referenceTo>SO_Vehicle_Manufacturer__c</referenceTo>
        <relationshipName>Asset_Ownerships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Vehicle_Details__c</fullName>
        <formula>SO_Manufacturer__r.Name &amp;  &apos; &apos; &amp; SO_Model__r.Name</formula>
        <label>Vehicle Details</label>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>SO_Owner</fullName>
        <active>true</active>
        <description>This enables you to select an Account whom is associated as being the owner of this vehicle</description>
        <label>Owner</label>
    </recordTypes>
    <recordTypes>
        <fullName>SO_Driver</fullName>
        <active>true</active>
        <description>This enables you to select a Contact whom is associated as being a driver of this vehicle</description>
        <label>Driver</label>
    </recordTypes>
    <validationRules>
        <fullName>SO_Validate_on_Start_and_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(SO_Start_Date__c )) &amp;&amp; NOT(ISBLANK(SO_End_Date__c)) &amp;&amp; SO_Start_Date__c &gt; SO_End_Date__c</errorConditionFormula>
        <errorMessage>Start Date should be prior to End Date</errorMessage>
    </validationRules>
</CustomObject>